Add existing file

--- a/sections/Intro/storia/storia.tex
+++ b/sections/Intro/storia/storia.tex
@@ -1,2 +1,3 @@
 \subsection{Cenni storici}
-Assurbanipal
+Nel 1850 Hippolyte Fizeau ideò un apparato nel quale un lampo di luce veniva inviato su uno specchio situato a 8 chilometri di distanza; lo specchio lo rifletteva fino all'osservatore: il tempo trascorso per percorrere i 16 chilometri non superava di molto 1/20 000 di secondo, ma Fizeau riuscì a misurarlo ponendo sul percorso del raggio luminoso una ruota dentata in rapida rotazione; il lampo, passato fra un dente e l'altro all'andata, colpiva il dente successivo al ritorno; quindi Fizeau, situato dietro la ruota non lo vedeva.
+Nel 1850, Léon Foucault perfezionò il metodo utilizzando uno specchio ruotante al posto della ruota dentata. Ora il tempo trascorso veniva misurato da un leggero cambiamento di direzione del raggio di luce riflesso. Questa misurazione fornì, come velocità della luce nell'aria, 298.000 chilometri al secondo.
