Ho modificato il main includendo gli obiettivi e corretta la sintassi LaTeX di obiettivi.tex

--- a/main/relazione.tex
+++ b/main/relazione.tex
@@ -2,7 +2,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
-
+\usepackage{SIunits}
 \begin{document}
 
 \author{Martelli Riccardo \and Trezzi Andrea \and Vallenzasca Davide}
@@ -29,6 +29,8 @@
 \input{../sections/Intro/storia/storia}
  
 \input{../sections/Intro/teoria/teoria}
+
+\input{../sections/Intro/obbiettivo/obbiettivo}
 
 \section{Descrizione dell'apparato sperimentale}
 
