--- a/sections/Esecuzione/CW.tex
+++ b/sections/Esecuzione/CW.tex
@@ -1,2 +1,5 @@
 \subsection{Misura Clockwise}
-Gioacchino Rossini
+%Gioacchino Rossini
+La misura della velocità della luce si effettua misurando lo spostamento dovuto alla rotazione dello speccio di un fascio di luce laser.
+Settando sul pannello del motore una frequenza nell'intervallo dei $70\sim 110\hertz$, per mezzo del micrometro fissato all'oculare, si centra il mirino nel centro del fascio laser.\\
+Dopo aver preso la misura della posizione, si aumenta la frequenza di rotazione al valore massimo di circa 1070\hertz.
