--- a/sections/Intro/obbiettivo/obbiettivo.tex
+++ b/sections/Intro/obbiettivo/obbiettivo.tex
@@ -1,2 +1,3 @@
-L'obbiettivo dell'esperienza è valutare la velocità della luce attraverso l'utilizzo del dispositivo di Foucault. Si effettuano misurazioni della velocità angolare dello specchio rotante e della posizione della macchia luminosa per determinare indirettamente la velocità della luce. Una volta calcolate le misure si procede al calcolo del valor medio e della sua incertezza e alla valutazione della compatibilità con il valore reale.
+\subsection{Obiettivo}
+L'obiettivo dell'esperienza è valutare la velocità della luce attraverso l'utilizzo del dispositivo di Foucault. Si effettuano misurazioni della velocità angolare dello specchio rotante e della posizione della macchia luminosa per determinare indirettamente la velocità della luce. Una volta calcolate le misure si procede al calcolo del valor medio e della sua incertezza e alla valutazione della compatibilità con il valore reale.
 
