--- a/sections/Analisi/CW1.tex
+++ b/sections/Analisi/CW1.tex
@@ -1,2 +1,5 @@
 \subsection{Clockwise parte 1}
-Gilgamesh
+Si vogliono qui analizzare i dati sulla velocità della luce ottenuti facendo girare lo specchio rotante in senso orario, fino ad una velocità massima di circa 1000 giri al secondo. 
+%tabella riassuntiva CW1
+
+La misura è buona, avendo una sigma percentuale del $2\%$.
