--- a/sections/Esecuzione/final.tex
+++ b/sections/Esecuzione/final.tex
@@ -1,4 +1,4 @@
 \subsection{Misura da CW a CCW}
 %Eugen Alexander von Thurn und Taxis
-La misura della velocità della luce passando dal regime limite CCW al regime limite CW si effettua omettendo il passaggio intermedio di misura della posizione in un intorno \Delta\nu dei $1070\hertz$ sia nel caso CW che nel caso CCW.
-La procedura di misura è la stessa, considernado però il  valore iniziale come quello CCW a $1500\hertz$  e finali di posizioni 
+La misura della velocità della luce passando dal regime limite CCW al regime limite CW si effettua omettendo il passaggio intermedio di misura della posizione in un intorno $\Delta\nu$ dei $1070\hertz$ sia nel caso CW che nel caso CCW.
+La procedura di misura è la stessa, considerando però il  valore iniziale come quello CCW a $\approx1500\hertz$  e come finale quello CW nello stesso range.
